[package]
name = "cloud-storage"
version = "0.11.0-rc.1"
authors = ["Luuk Wester <luuk.wester@gmail.com>"]
edition = "2021"
description = "A crate for uploading files to Google cloud storage, and for generating download urls."
license = "MIT"
repository = "https://github.com/ThouCheese/cloud-storage-rs"
documentation = "https://docs.rs/cloud-storage"
keywords = ["google", "cloud", "storage"]
readme = "README.md"
categories = ["api-bindings", "web-programming"]
# maintenance = { status = "actively-developed" }

[features]
default = ["rustls-tls"]

global-client = []
sync = ["reqwest/blocking"]
native-tls = ["reqwest/default-tls", "openssl"]
rustls-tls = ["reqwest/rustls-tls", "ring", "pem", "jsonwebtoken/use_pem"]
trust-dns = ["reqwest/trust-dns"]

cloud-run = []
gcloud-auth = ["tokio/process"]

[dependencies]
gcp_auth =         { version = "0.7.2", features = [] }
reqwest =          { version = "0.11.10", default-features = false, features = ["json", "stream"] }
percent-encoding = { version = "2.1.0", default-features = false }
jsonwebtoken =     { version = "8.1.0", default-features = false }
serde =            { version = "1.0.136", default-features = false, features = ["derive"] }
serde_json =       { version = "1.0.79", default-features = false }
base64 =           { version = "0.13.0", default-features = false }
lazy_static =      { version = "1.4.0", default-features = false }
dotenv =           { version = "0.15.0", default-features = false }
openssl =          { version = "0.10.38", default-features = false, optional = true }
ring =             { version = "0.16.20", default-features = false, optional = true }
pem =              { version = "1.0.2", default-features = false, optional = true }
chrono =           { version = "0.4.19", default-features = false, features = ["serde", "alloc", "clock"] }
hex =              { version = "0.4.3", default-features = false, features = ["alloc"] }
tokio =            { version = "1.17.0", default-features = false, features = ["macros", "rt"] }
futures =          { version = "0.3.21", default_features = false, features = ["alloc"] }
bytes =            { version = "1.1.0", default-features = false }
async-trait =      { version = "0.1.53", default-features = false }
const_format = "0.2.22"

[dev-dependencies]
tokio =            { version = "1.17.0", default-features = false, features = ["full"] }

[package.metadata.docs.rs]
features = ["global-client", "sync"]
